--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-icons": "^2.2.5"
+    "react-icons": "^2.2.5",
+    "react-motion": "^0.5.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.10",
